# stigma

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
benchmarks/: bench_vs_majority.py
docs/: SHOW_HN.md  why-majority-vote-fails.md
examples/: llm_ensemble.py
stigma/: __init__.py  consensus.py  pheromone.py  signals.py  swarm.py
tests/: test_swarm.py
