[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "stigma-consensus"
version = "0.1.0"
description = "Stigmergic consensus for multi-agent / multi-model systems -- a learned alternative to majority vote and self-consistency."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Satyawan Singh" }]
keywords = ["llm", "ensemble", "consensus", "multi-agent", "self-consistency", "swarm", "aco"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.4"]

[project.urls]
Homepage = "https://github.com/ss1738/stigma"
Issues = "https://github.com/ss1738/stigma/issues"

[tool.hatch.build.targets.wheel]
packages = ["stigma"]

[tool.ruff]
line-length = 88
target-version = "py39"
